hphp/hack/test/typecheck/function_pointer/reified_fun.php.exp
File "reified_fun.php", line 6, characters 3-12:
Invalid function reference. This function requires reified generics. Prefer using a lambda instead. (Typing[4381])
