hphp/hack/test/typecheck/function_pointer/reified_fun.php
<?hh

function foo<reify T>(): void {}

function test(): void {
  fun('foo');
}
